Start unit converting implementation
