# src/main/java/de/cw/cwcocktailapi/exception/ExceptionDto.java
@@ -1,0 +1,14 @@
+package de.cw.cwcocktailapi.exception;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+
+@Data
+@AllArgsConstructor
+public class ExceptionDto {
+
+  private String attribute;
+
+  private String errorMessage;
+
+}
